--- a/web.html
+++ b/web.html
@@ -15,11 +15,19 @@
             <p>About</p>
             <p>Jade la boss</p>
         </div>
-
     </header>
     <div class="body">
         <h1 id="title">« Dream It, Do It »</h1>
-    </div>
+        <img id= "image"src="sneaker.png"alt="sneaker" width="200px" height="300px"/>
+        <h2 id ="text"><p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+            <p>industry. Lorem Ipsum has been the industry's standard dummy text</p>
+            <p>ever since the 1500s when an unknown printer took a galley of type and</p>
+            <p>scrambled it to make a type specimen book.</p>
+            <p>It has survived not only five centuries, but also the leap into electronic</p>
+            <p>typesetting,</p>
+            </h2>
+    </div>      
+
     
 </body>
 </html>
