rajout de mes changements qui on disparu

--- a/web.html
+++ b/web.html
@@ -29,7 +29,7 @@
     </header>
     <div class="body">
         <h1 id="title">« Dream It, Do It »</h1>
-        <img id= "image"src="sneaker.png"alt="sneaker" width="200px" height="300px"/>
+        <img id= "sneaker"src="sneaker.png"alt="sneaker" width="200px" height="300px"/>
         <h2 id ="text"><p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
             <p>industry. Lorem Ipsum has been the industry's standard dummy text</p>
             <p>ever since the 1500s when an unknown printer took a galley of type and</p>
