j'ai oublié de push

--- a/web.html
+++ b/web.html
@@ -27,17 +27,25 @@
             </div>
         </nav>
     </header>
-    <div class="body">
-        <h1 id="title">« Dream It, Do It »</h1>
-        <img id= "sneaker"src="sneaker.png"alt="sneaker" width="200px" height="300px"/>
-        <h2 id ="text"><p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-            <p>industry. Lorem Ipsum has been the industry's standard dummy text</p>
-            <p>ever since the 1500s when an unknown printer took a galley of type and</p>
-            <p>scrambled it to make a type specimen book.</p>
-            <p>It has survived not only five centuries, but also the leap into electronic</p>
-            <p>typesetting,</p>
-            </h2>
-    </div>      
+    <div class="container">
+            <div class="body">
+                <h1 id="title">« Dream It, Do It »</h1>
+                <div id = "img"> 
+                    <img id="sneaker"src="sneaker.png"alt="sneaker" width="200px" height="300px"/>
+                </div>
+                <div id ="text"><p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                    <p>industry. Lorem Ipsum has been the industry's standard dummy text</p>
+                    <p>ever since the 1500s when an unknown printer took a galley of type and</p>
+                    <p>scrambled it to make a type specimen book.</p>
+                    <p>It has survived not only five centuries, but also the leap into electronic</p>
+                    <p>typesetting,</p>
+                </div>
+            <div id = "button">
+                <button>Buy it ! </button>
+            </div>
+        </div>
+    </div>
+ 
 
     
 </body>
